success failure timeout updated

--- a/src/client/views/index.ejs
+++ b/src/client/views/index.ejs
@@ -12,7 +12,7 @@
         <%- include ('partials/header.ejs') %>
         <section class="container container1">
             <% if (session.userId) { %>
-                <div class="success">
+                <div class="success" id="success">
                     <i class="far fa-check-circle"></i> 
                     <div class="success-message">
                        <h5>Success</h5> 
