--- a/src/client/css/login.css
+++ b/src/client/css/login.css
@@ -106,4 +106,27 @@
       margin: 15rem 25rem;
       box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     }
+    
+  .failure{
+    position: absolute;
+    right: 1%;
+    top: 17%;
+    background-color: white;
+    color: red;
+    display: grid;
+    grid-template-columns: 15% 70% 15%;
+    align-items: center;
+    width: 350px;
+    border-left: 5px solid red;
+    padding: 0.5rem;
+  }
+  .failure .fa-times-circle{
+    font-size: 1.5rem;
+  }
+  .failure .fa-times{
+    color: var(--grey);
+  }
+  .failure-message h5, .failure-message h6{
+    padding: .2rem;
+  }
   }
