--- a/src/client/views/login.ejs
+++ b/src/client/views/login.ejs
@@ -32,10 +32,17 @@
                             <input type="email" name="email" placeholder="Enter Email Address">
                             <i class="fas fa-question-circle"></i>
                         </div>
-                        <input type="password" name="password" placeholder="Enter password">
+                        <div class="emailInput">
+                            <input type="password" name="password" placeholder="Enter password">
+                            <i class="far fa-eye-slash password-eye eye"></i>
+                        </div>
+                        <div class="otpandForgotpswd">
+                            <a href="phoneLogin">Login With OTP</a>
+                            <a href="OTP">Forgot Password ?</a>
+                        </div>
                         <div class="loginButton">
                             <button class="primary" type="submit">LOGIN</button>
-                            <i class="fas fa-arrow-right"></i>                        
+                            <i class="fas fa-arrow-right"></i>      
                         </div>
                 </form>
                 </div>
