--- a/src/client/css/themes.css
+++ b/src/client/css/themes.css
@@ -67,6 +67,7 @@ a{
   text-decoration:none;
   color: inherit;
   cursor: pointer;
+  font-family: "Nexa-Light";;
 }
 a:hover{  
   color: var(--button-blue);
@@ -157,6 +158,9 @@ letter-spacing: 0.05rem;
     width: 100%;
     border: none;
     height: 40px;
+    }
+    input:focus, textarea:focus, select:focus{
+      outline: none;
     }
     ::placeholder{
     font-family: "Nexa-Light";
