--- a/src/client/views/index.ejs
+++ b/src/client/views/index.ejs
@@ -11,14 +11,13 @@
     <body>
         <%- include ('partials/header.ejs') %>
         <section class="container container1">
-            <% if (session) { %>
+            <% if (session.userId) { %>
                 <div class="success" id="success">
                     <i class="far fa-check-circle"></i> 
                     <div class="success-message">
                        <h5>Success</h5> 
                        <h6>Login Successful</h6>                                                                                                                                                                
-                    </div>  
-                    <i class="fas fa-times"></i>                                                                                                                                                                                                                                                                                                                                   
+                    </div>                                                                                                                                                                                                                                                                                                                                                      
                 </div>
                 <% }  %>
             <h1>Find Affordable Healthcare</h1>
