Login with OTP update

--- a/src/client/views/OTP.ejs
+++ b/src/client/views/OTP.ejs
@@ -19,7 +19,7 @@
                 <form action="/otpValidation" method="post">
                     <div class="inputContainer">
                         <p>We have sent One Time Password(OTP) to your registered Phone Number</p>
-                        <input id="partitioned" type="text" maxlength="4" >
+                        <input id="partitioned" name="code" type="text" maxlength="4" >
                         <div class="resend">
                             <a href="">Resend in </a>
                         </div>
