--- a/src/client/css/index.css
+++ b/src/client/css/index.css
@@ -415,7 +415,7 @@ border-radius: 10px;
         padding-bottom: 1.5rem;
       }
     .container1{
-      padding: 8rem 5rem;;
+      padding: 8rem 5rem;
       background-color: var(--light-blue);
       width: 10%;
       background-image: url(https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/img1.jpg);
