--- a/src/client/views/index.ejs
+++ b/src/client/views/index.ejs
@@ -11,7 +11,7 @@
     <body>
         <%- include ('partials/header.ejs') %>
         <section class="container container1">
-            <% if (session.userId) { %>
+            <% if (user) { %>
                 <div class="success" id="success">
                     <i class="far fa-check-circle"></i> 
                     <div class="success-message">
