password change update

--- a/src/client/views/forgotPassword.ejs
+++ b/src/client/views/forgotPassword.ejs
@@ -12,25 +12,26 @@
         <%- include ('partials/header.ejs') %>
 
         <section class="container">
-            
             <div class="loginBox">
                 <div class="loginBoxhead">
-                    <h4>Create New Password</h4>
+                    <h4>Enter Your Registered Number</h4>
                 </div>
-                <form action="/newPassword" method="post">
+                <form action="/otpForPasswordReset" method="post">
                     <div class="inputContainer">
                         <div class="emailInput">
-                            <input type="password" name="password" placeholder="Enter password">
-                            <i class="far fa-eye-slash password-eye eye"></i>
+                            <input type="tel" name="number" placeholder="Enter Mobile Number">
                         </div>
-                        <div class="emailInput">
-                            <input type="password" name="password" placeholder="Confirm password">
+                        <div class="loginWithPassword">
+                            <a href="login">Login with password</a>
                         </div>
                         <div class="loginButton">
-                            <button class="primary" type="submit">SUBMIT</button>
+                            <button class="primary" type="submit">GET OTP</button>
                             <i class="fas fa-arrow-right"></i>      
                         </div>
                 </form>
+                </div>
+                <div class="redirect">
+                    <p >Not Registered?<a href="signup">&nbsp;Sign Up</a> </p>
                 </div>
             </div>
             <div class="foot-rights">
