--- a/src/client/views/login.ejs
+++ b/src/client/views/login.ejs
@@ -38,7 +38,7 @@
                         </div>
                         <div class="otpandForgotpswd">
                             <a href="phoneLogin">Login With OTP</a>
-                            <a href="OTP">Forgot Password ?</a>
+                            <a href="forgotPassword">Forgot Password ?</a>
                         </div>
                         <div class="loginButton">
                             <button class="primary" type="submit">LOGIN</button>
