--- a/src/client/views/otpForPasswordReset.ejs
+++ b/src/client/views/otpForPasswordReset.ejs
@@ -12,22 +12,19 @@
         <%- include ('partials/header.ejs') %>
 
         <section class="container">
-            
             <div class="loginBox">
                 <div class="loginBoxhead">
-                    <h4>Create New Password</h4>
+                    <h4>OTP</h4>
                 </div>
-                <form action="/newPassword" method="post">
+                <form action="/resetPassword" method="post">
                     <div class="inputContainer">
-                        <div class="emailInput">
-                            <input type="password" name="password" placeholder="Enter password">
-                            <i class="far fa-eye-slash password-eye eye"></i>
-                        </div>
-                        <div class="emailInput">
-                            <input type="password" name="password" placeholder="Confirm password">
+                        <p>We have sent One Time Password(OTP) to your registered Phone Number</p>
+                        <input id="partitioned" name="code" type="text" maxlength="4" >
+                        <div class="resend">
+                            <a href="">Resend in </a>
                         </div>
                         <div class="loginButton">
-                            <button class="primary" type="submit">SUBMIT</button>
+                            <button class="primary" type="submit">SUMBIT</button>
                             <i class="fas fa-arrow-right"></i>      
                         </div>
                 </form>
