--- a/src/client/views/newPassword.ejs
+++ b/src/client/views/newPassword.ejs
@@ -24,7 +24,7 @@
                             <i class="far fa-eye-slash password-eye eye"></i>
                         </div>
                         <div class="emailInput">
-                            <input type="password" name="password" placeholder="Confirm password">
+                            <input type="password" name="confirmPassword" placeholder="Confirm password">
                         </div>
                         <div class="loginButton">
                             <button class="primary" type="submit">SUBMIT</button>
