--- a/src/client/views/index.ejs
+++ b/src/client/views/index.ejs
@@ -28,7 +28,7 @@
                 <div class="location">
                     <i class="fas fa-map-marker-alt"></i>
                     <i class="fas fa-crosshairs"></i>
-                    <input type="text" name="location" id="autocomplete" placeholder="Ahmedabad"/>
+                    <input type="text"  id="autocomplete" placeholder="Ahmedabad"/>
                 </div>
                 <div class="search1">
                     <input id="myInput" type="text" placeholder="Search for doctors,hospitals and treatments">
@@ -321,7 +321,7 @@
             }
         </script>
         <script async
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDipoKXR0jrMeoCg-K7DyVqWblRwsv-LPw&libraries=places&callback=activatePlacesSearch">
-        </script>
+        src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places&callback=initMap">
+    </script>
     </body>
 </html>
