--- a/src/client/css/common.css
+++ b/src/client/css/common.css
@@ -276,7 +276,7 @@
     @media only screen and (min-width: 1024px){  
       .top-nav{
         display: grid;
-        grid-template-columns: 15% 60% 25%;
+        grid-template-columns: 15% 55% 30%;
         padding: 1.5rem 5rem;
       } 
       .top-nav a, .top-nav li{
@@ -308,8 +308,26 @@
         font-weight: 800;
       }
       .navButtons{
-        align-self: center;
-        justify-self: flex-end;
+        display: grid;
+        grid-template-columns: 40% 40% 20%;
+        align-items: center;
+      }
+      .drop{  
+        overflow: hidden;
+      }
+      .userName{
+        padding: .5rem 0rem;
+      }
+      .dropContent{
+        display: none;
+        position: absolute;
+        padding: 1rem;
+        background-color: #f9f9f9;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        z-index: 1;
+      }
+      .drop:hover .dropContent {
+        display: block;
       }
       .container6{
         background-color: var(--lt-skyblue);
