OTP login and password reset done

--- a/src/client/views/OTP.ejs
+++ b/src/client/views/OTP.ejs
@@ -16,7 +16,7 @@
                 <div class="loginBoxhead">
                     <h4>OTP</h4>
                 </div>
-                <form action="/otpValidation" method="post">
+                <form action="/directLogin" method="post">
                     <div class="inputContainer">
                         <p>We have sent One Time Password(OTP) to your registered Phone Number</p>
                         <input id="partitioned" name="code" type="text" maxlength="4" >
