--- a/src/client/views/index.ejs
+++ b/src/client/views/index.ejs
@@ -322,7 +322,7 @@
             }            
         </script>
         <script async
-            src="https://maps.googleapis.com/maps/api/js?key=API_KEY&libraries=places&callback=initAutocomplete">
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBNiyAw1v13oRpW0C2s9eOLVQtiPKBjK0c&libraries=places&callback=initAutocomplete">
         </script>
     </body>
 </html>
