--- a/src/client/views/aboutUs.ejs
+++ b/src/client/views/aboutUs.ejs
@@ -6,7 +6,11 @@
         <link rel="stylesheet" href="../css/reset.css">
         <link rel="stylesheet" href="../css/themes.css">
         <link rel="stylesheet" href="../css/aboutUs.css">   
-        <link rel="stylesheet" href="../css/common.css">                 
+        <link rel="stylesheet" href="../css/common.css">   
+        <link rel="apple-touch-icon" sizes="180x180" href="../fav/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="../fav/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="../fav/favicon-16x16.png">
+        <link rel="manifest" href="../fav/site.webmanifest">                
     </head>
     <body>
         <%- include ('partials/header.ejs') %>
