--- a/src/client/views/partials/header.ejs
+++ b/src/client/views/partials/header.ejs
@@ -54,7 +54,9 @@
                         <% } %>
                 </div>
             </div>
-            <i class="fas fa-bars mob-tab"></i>
+            <button class="third navButton1 nav-mob-btn mob-tab" onclick="location.href='/login'">
+                Login/Signup
+            </button>
         </nav>
         <script src="../scripts/navigation.js"></script>
     </body>
