--- a/src/client/css/themes.css
+++ b/src/client/css/themes.css
@@ -241,5 +241,6 @@ letter-spacing: 0.05rem;
         border-radius: 5px;
         padding: .8rem .5rem;
         font-size: .8rem;
+        border-radius: 5px;
       }
 }
