--- a/src/client/views/partials/header.ejs
+++ b/src/client/views/partials/header.ejs
@@ -12,7 +12,7 @@
         <nav class="top-nav">
             <div class="nav-logo">
                 <a href="/">
-                    <img class="logo-tvastra" src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/footer.png" >
+                    <img class="logo-tvastra" src="../../images/tvastra_logo.png" >
                 </a>
             </div>
             <div class="desktop-nav desktop">          
